@@ -57,7 +57,8 @@ protected:
     PostgresqlConnection(Driver *driver, const ConnectionData& connData);
 
     virtual bool drv_isDatabaseUsed() const;
-    virtual bool drv_connect(Predicate::ServerVersionInfo* version);
+    virtual bool drv_connect();
+    virtual bool drv_getServerVersion(Predicate::ServerVersionInfo* version);
     virtual bool drv_disconnect();
     virtual bool drv_getDatabasesList(QStringList* list);
     virtual bool drv_createDatabase(const QString &dbName = QString());
